# forge

./: .gitignore  CLAUDE.md  GYM.md  pom.xml  run-forge-headless.sh
forge-ai/: pom.xml
forge-ai/src/main/java/forge/ai/: LobbyPlayerAi.java  PlayerControllerRl.java  RlBridge.java  RlDemo.java
forge-ai/src/main/java/forge/ai/gym/: GymOption.java  GymSocket.java  LobbyPlayerGym.java  PlayerControllerGym.java  PythonGymInterface.java
forge-gui-desktop/src/main/java/forge/view/: GymServer.java  Main.java  SimulateMatch.java
forge-gui/release-files/: CHANGES.txt
forge-gui/res/cardsfolder/upcoming/: adaptive_omnitool.txt  aetherflux_conduit.txt  lost_monarch_of_ifnir.txt  marshals_pathcruiser.txt  nissa_worldsoul_speaker.txt  peema_trailblazer.txt  rampaging_aetherhood.txt  spotcycle_scouter.txt  stridehangar_automaton.txt  wreck_remover.txt
forge-gui/src/main/java/forge/player/: GamePlayerUtil.java
forge-gym/: forge_env.py  pom.xml  pyproject.toml
forge-gym-env/: forge_env.py
forge-gym/notebooks/: jupytext.toml  train.ipynb  train.notebook.py
forge-gym/src/main/java/forge/gym/: GymOption.java  LobbyPlayerGym.java  PlayerControllerGym.java  PlayerControllerGym2.java.txt
python/: forge_rl_gym.py  interactive_play.py  kill_forge.py  minimal_test.py  test_communication.py  train_rl_agent.py
python/scripts/: run-forge.sh
