[project]
name = "forge-gym"
version = "0.1.0"
description = "Gymnasium environment for Forge MTG"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=1.0",
    "numpy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["forge_env.py"]
